Finished conclusion and challenges.

--- a/literature.bib
+++ b/literature.bib
@@ -255,3 +255,11 @@
 	keywords = {refsw},
 	pages = {53--63}
 }
+
+@article{miller_open_2008,
+	title = {Open {Data} {Commons}, a {License} for {Open} {Data}.},
+	volume = {369},
+	journal = {LDOW},
+	author = {Miller, Paul and Styles, Rob and Heath, Tom},
+	year = {2008}
+}
