--- a/seminar-work-linked-open-data.tex
+++ b/seminar-work-linked-open-data.tex
@@ -35,7 +35,13 @@
 \maketitle
 
 \begin{abstract}
-The abstract goes here.
+Although many universities have already published their public resources according to the Linked Data principles there have not been any efforts at the Vienna University of Technology (TU Vienna). This paper shows international success stories and best practises for applying Linked Open Data at universities. 
+
+Furthermore, this paper aims to discover benefits and challenges of applying Linked Open Data at TU Vienna as well as to discover new use cases and to evaluate known ones from other universities from the perspective of the students. In order to attain this goal a case study was conducted in which \textit{\textbf{five}} persons from students to people affiliated with student affairs participated. These five participants were interviewed by two researchers following a questionnaire. TU Vienna has several faculties including Computer Sciences and Electrical Engineering \& Information Technology, which is exactly why the evaluation of the willingness of students to develop applications based on LOD exposed by the university was also part of the case study. 
+
+Finally, a model is suggested that describes how a Linked Open Data effort at a university could evolve. An important part of this model is the provision of public university resources that are demanded by the stakeholders as Linked Open Data. \textit{Students}, \textit{Researchers} and \textit{Administration staff} has been identified as important stakeholders at a university. A technical architecture is proposed for the provision of public university resources as LOD facing the issues of diverging data sources and data formats. Afterwards the most important challenges for the system designer and project manager are discussed including data freshness and data ownership.
+
+
 \end{abstract}
 
 \smallskip
