Adds missing tags for literature references.

--- a/literature.bib
+++ b/literature.bib
@@ -3,7 +3,8 @@
 	title = {Linked {Data} - {The} {Story} {So} {Far}},
 	journal = {International Journal on Semantic Web and Information Systems},
 	author = {Bizer, Christian and Heath, Tom and Berners-Lee, Tim},
-	year = {2009}
+	year = {2009},
+	keywords = {refsw}
 }
 
 @inproceedings{clarke_resource_2009,
@@ -11,7 +12,7 @@
 	booktitle = {The {Semantic} {Web}: {Research} and {Applications}},
 	author = {Clarke, Chris and Greig, Fiona},
 	year = {2009},
-	keywords = {appendix}
+	keywords = {appendix, refsw}
 }
 
 @inproceedings{zablith_consuming_2011,
@@ -74,7 +75,8 @@
 	author = {Jacobs, Ian and Walsh, Norman},
 	month = dec,
 	year = {2004},
-	note = {http://www.w3.org/TR/2004/REC-webarch-20041215/}
+	note = {http://www.w3.org/TR/2004/REC-webarch-20041215/},
+	keywords = {nonrefw}
 }
 
 @misc{daquin_members_2014,
@@ -85,10 +87,9 @@
 	note = {[accessed 8-February-2016]}
 }
 
-@article{berners-lee_linked_2006,
+@misc{berners-lee_linked_2006,
 	title = {Linked {Data} - {Design} {Issues}},
 	url = {http://www.w3.org/DesignIssues/LinkedData.html},
-	number = {09/20},
 	journal = {W3C},
 	author = {Berners-Lee, Tim},
 	year = {2006}
@@ -155,6 +156,7 @@
 	url = {https://www.w3.org/TR/ld-glossary/#rest-api},
 	urldate = {2016-03-30},
 	author = {Hyland, Bernadette and Atemezing, Ghislain and Pendleton, Michael and Srivastava, Biplav},
+	keywords = {nonrefw},
 	file = {Linked Data Glossary:/home/haller/.mozilla/firefox/da65lf10.default/zotero/storage/CXVQNG4T/ld-glossary.html:text/html}
 }
 
@@ -214,7 +216,8 @@
 	url = {http://linkedup-project.eu/files/2014/11/LinkedUp_D2.2.2.pdf},
 	author = {Drachsler, Hendrik and Stoyanov, Slavi and Guy, Marieke and Scheffel, Maren},
 	year = {2014},
-	note = {[accessed 28-March-2016]}
+	note = {[accessed 28-March-2016]},
+	keywords = {nonrefw}
 }
 
 @misc{daquin_lucero_2010-1,
@@ -261,5 +264,6 @@
 	volume = {369},
 	journal = {LDOW},
 	author = {Miller, Paul and Styles, Rob and Heath, Tom},
-	year = {2008}
+	year = {2008},
+	keywords = {refsw}
 }
