--- a/seminar-work-linked-open-data.tex
+++ b/seminar-work-linked-open-data.tex
@@ -576,7 +576,7 @@ The \textit{Linked Open Vocabularies} repository\footnote{\url{http://lov.okfn.o
 
 \subsection{Challenges}
 \label{technical-architecture-challenges:challenges}
-In the previous sections a system architecture to expose demanded public resources of a university were discussed as well as use cases based on such Linked Open Data. This section discusses briefly the most important issues that system designer and project manager has to deal with when starting a Linked Open Data effort at a university. At a university the data quality issue might not be too relevant, because the data is integrated from a set of know sources. \enquote{In cases where the system integrate data from the open Web, data quality assessment becomes crucial}\cite{heath_linked_2011}. However, in the following the issue of data freshness among others is raised.
+In the previous sections a system architecture to expose demanded public resources of a university was discussed as well as use cases based on such Linked Open Data. This section discusses briefly the most important issues that system designer and project manager has to deal with when starting a Linked Open Data effort at a university. At a university the data quality issue might not be too relevant, because the data is integrated from a set of know sources. \enquote{In cases where the system integrate data from the open Web, data quality assessment becomes crucial}\cite{heath_linked_2011}. However, in the following the issue of data freshness among others is raised.
 
 \paragraph{Data ownership:}
 \label{technical-architecture-challenges:challenges:data-ownership}
